# HarmonyOS-IoT-Application-Development

./: BUILD.gn  README.md
01_envsetup/: README.md  hos_deveco_device_tool_install.md  hos_source_code_download_and_compile.md
02_device_control/: README.md  beeper_music_demo.c  traffic_light_demo.c
03_sensing/: BUILD.gn  README.md  enrionment_demo.c  oled_demo.c  oled_fonts.h  oled_ssd1306.c  oled_ssd1306.h
04_wifi/: BUILD.gn  README.md  wifi_connect_demo.c  wifi_scan_demo.c
05_network/: BUILD.gn  Makefile  README.md  demo_entry_posix.c  net_common.h  net_demo_common.h  net_demo_main.c  net_demo_ohos.c  net_params.h  tcp_client_demo.c  tcp_client_test.c  tcp_client_test.h  tcp_server_demo.c  tcp_server_test.c  tcp_server_test.h  udp_client_demo.c  udp_client_test.c  udp_client_test.h  udp_server_demo.c  udp_server_test.c  udp_server_test.h
